updating courses section

--- a/index.html
+++ b/index.html
@@ -59,52 +59,49 @@
                         <div class="course">
                             <img src="images/thumbnail.png" alt="course thumbnail" class="thumb">
                             <h4>Learn Python: The Complete Python Programming Course</h4>
-                            <p>Avinash jain, The Codex</p>
+                            <p style="font-size: 90%; color: rgb(83, 83, 83);">Mahmoud Aboelsoud</p>
                             <img src="images/rating.png" alt="course rate" class="rate">
-                            <p><b>E<span>&#8364;</span>679.99</b></p>
+                            <p><b>E<span>&#8364;</span>679.99</b> <del style="color: rgb(103, 101, 101); font-size: 90%;">E<span>&#8364;</span>999.99</del></p>
                         </div>
                     </a>
                     <a href="">
                         <div class="course">
                             <img src="images/thumbnail.png" alt="course thumbnail" class="thumb">
                             <h4>Learn Python: The Complete Python Programming Course</h4>
-                            <p>Avinash jain, The Codex</p>
+                            <p style="font-size: 90%; color: rgb(83, 83, 83);">Mahmoud Aboelsoud</p>
                             <img src="images/rating.png" alt="course rate" class="rate">
-                            <p><b>E<span>&#8364;</span>679.99</b></p>
+                            <p><b>E<span>&#8364;</span>679.99</b> <del style="color: rgb(103, 101, 101); font-size: 90%;">E<span>&#8364;</span>999.99</del></p>
                         </div>
                     </a>
                     <a href="">
                         <div class="course">
                             <img src="images/thumbnail.png" alt="course thumbnail" class="thumb">
                             <h4>Learn Python: The Complete Python Programming Course</h4>
-                            <p>Avinash jain, The Codex</p>
+                            <p style="font-size: 90%; color: rgb(83, 83, 83);">Mahmoud Aboelsoud</p>
                             <img src="images/rating.png" alt="course rate" class="rate">
-                            <p><b>E<span>&#8364;</span>679.99</b></p>
+                            <p><b>E<span>&#8364;</span>679.99</b> <del style="color: rgb(103, 101, 101); font-size: 90%;">E<span>&#8364;</span>999.99</del></p>
                         </div>
                     </a>
                     <a href="">
                         <div class="course">
                             <img src="images/thumbnail.png" alt="course thumbnail" class="thumb">
                             <h4>Learn Python: The Complete Python Programming Course</h4>
-                            <p>Avinash jain, The Codex</p>
+                            <p style="font-size: 90%; color: rgb(83, 83, 83);">Mahmoud Aboelsoud</p>
                             <img src="images/rating.png" alt="course rate" class="rate">
-                            <p><b>E<span>&#8364;</span>679.99</b></p>
+                            <p><b>E<span>&#8364;</span>679.99</b> <del style="color: rgb(103, 101, 101); font-size: 90%;">E<span>&#8364;</span>999.99</del></p>
                         </div>
                     </a>
                     <a href="">
                         <div class="course">
                             <img src="images/thumbnail.png" alt="course thumbnail" class="thumb">
                             <h4>Learn Python: The Complete Python Programming Course</h4>
-                            <p>Avinash jain, The Codex</p>
+                            <p style="font-size: 90%; color: rgb(83, 83, 83);">Mahmoud Aboelsoud</p>
                             <img src="images/rating.png" alt="course rate" class="rate">
-                            <p><b>E<span>&#8364;</span>679.99</b></p>
+                            <p><b>E<span>&#8364;</span>679.99</b> <del style="color: rgb(103, 101, 101); font-size: 90%;">E<span>&#8364;</span>999.99</del></p>
                         </div>
                     </a>
                 </section>
-            </section>
-            
-            
+            </section>  
         </section>
-
     </body>
 </html>
