--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Choose from 185,000 online video courses with new additions published every month</p>
 
             <form action="" class="topics-tap">
-                <input type="radio" id="course-1" name="topic" checked = "checked">
+                <input type="radio" id="course-1" name="topic" checked>
                 <label for="course-1">Python</label>
                 <input type="radio" id="course-2" name="topic">
                 <label for="course-2">Excel</label>
