making courses tap and search bar working

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img src="images/logo-udemy.svg" alt="udemy logo" class="logo nav-items">
             <a href="" class="nav-items display-small link">Categories</a>
             <form action="" class="nav-items display-small search-bar">
-                <button type="submit"><i class="fas fa-solid fa-magnifying-glass fa-1x"></i></button>
-                <input type="text" name="Search" placeholder="Search for anything">
+                <button type="submit" class="submit"><i class="fas fa-solid fa-magnifying-glass fa-1x "></i></button>
+                <input type="text" name="Search" placeholder="Search for anything" class="search-field">
             </form>
             <a href="" class="nav-items display-udemyBusiness display-small link">Udemy Business</a>
             <a href="" class="nav-items display-teach display-small link">Teach on Udemy</a>
@@ -45,24 +45,24 @@
             <p>Choose from 185,000 online video courses with new additions published every month</p>
 
             <form action="" class="topics-tap">
-                <input type="radio" id="course-1" name="topic" checked>
-                <label for="course-1">Python</label>
-                <input type="radio" id="course-2" name="topic">
-                <label for="course-2">Excel</label>
-                <input type="radio" id="course-3" name="topic">
-                <label for="course-3">Web Development</label>
-                <input type="radio" id="course-4" name="topic">
-                <label for="course-4">JavaScript</label>
-                <input type="radio" id="course-5" name="topic">
-                <label for="course-5">Data Science</label>
-                <input type="radio" id="course-6" name="topic">
-                <label for="course-6">AWS Certification</label>
-                <input type="radio" id="course-7" name="topic">
-                <label for="course-7">Drawing</label>
+                <input type="radio" id="Python" name="topic" checked>
+                <label for="Python">Python</label>
+                <input type="radio" id="Excel" name="topic">
+                <label for="Excel">Excel</label>
+                <input type="radio" id="Web Development" name="topic">
+                <label for="Web Development">Web Development</label>
+                <input type="radio" id="JavaScript" name="topic">
+                <label for="JavaScript">JavaScript</label>
+                <input type="radio" id="Data Science" name="topic">
+                <label for="Data Science">Data Science</label>
+                <input type="radio" id="AWS" name="topic">
+                <label for="AWS">AWS Certification</label>
+                <input type="radio" id="Drawing" name="topic">
+                <label for="Drawing">Drawing</label>
             </form>
 
 
-            <section class="explain">
+            <section class = "explain">
                 <h3>Expand your career opportunities with Python</h3>
                 <p>
                     Take one of Udemy's range of Python courses and learn how to code using this incredibly useful language.
@@ -161,5 +161,7 @@
                 </section>
             </section>  
         </section>
+
+        <script src="js/script.js"></script>
     </body>
 </html>
