Adding comments and Fix some style

--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- linking style sheets -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/fc03b77d76.js" crossorigin="anonymous"></script>
+        <!-- adding page title and icon -->
         <title>Online Courses - Learn Anything, On Your Schedule | Udemy</title>
         <link rel="icon" type="image/png" sizes="32x32" href="https://www.udemy.com/staticx/udemy/images/v8/favicon-32x32.png">
     </head>
 
     <body>
+        <!-- nav bar section -->
         <nav>
             <span class="nav-items display-bar"><i class="fas fa-bars fa-2x"></i></span>
             <img src="images/logo-udemy.svg" alt="udemy logo" class="logo nav-items">
             <a href="" class="nav-items display-small link">Categories</a>
+            <!-- search bar -->
             <form action="" class="nav-items display-small search-bar">
                 <button type="submit" class="submit"><i class="fas fa-solid fa-magnifying-glass fa-1x "></i></button>
                 <input type="text" name="Search" placeholder="Search for anything" class="search-field">
@@ -28,7 +32,7 @@
             <button class="nav-items display-small lang"><i class="fas fa-solid fa-globe fa-2x"></i></button>
         </nav>
 
-
+        <!-- header section -->
         <header>
             <section class="header-items content">
                 <h1><strong>New to Udemy? Lucky you.</strong></h1>
@@ -39,12 +43,13 @@
             </figure>
         </header>
 
-
+        <!-- courses section -->
         <section class="courses">
             <h2>A broad selection of courses</h2>
             <p>Choose from 185,000 online video courses with new additions published every month</p>
 
-            <form action="" class="topics-tap">
+            <!-- topics tab buttons -->
+            <form action="" class="topics-tab">
                 <input type="radio" id="Python" name="topic" checked>
                 <label for="Python">Python</label>
                 <input type="radio" id="Excel" name="topic">
@@ -61,8 +66,9 @@
                 <label for="Drawing">Drawing</label>
             </form>
 
-
+            <!-- the choosen topic data -->
             <section class = "explain">
+                <!-- topic description -->
                 <h3>Expand your career opportunities with Python</h3>
                 <p>
                     Take one of Udemy's range of Python courses and learn how to code using this incredibly useful language.
@@ -72,6 +78,7 @@
                 </p>
                 
                 <a href=""><b>Explore Python</b></a>
+                <!-- courses cards -->
                 <section class="container">
                     <a href="">
                         <div class="course">
@@ -161,7 +168,7 @@
                 </section>
             </section>  
         </section>
-
+        <!-- linking script  -->
         <script src="js/script.js"></script>
     </body>
 </html>
