Add carousel to courses section

--- a/index.html
+++ b/index.html
@@ -83,24 +83,38 @@
                 
                 <a href=""><b>Explore Python</b></a>
                 <!-- courses cards -->
-                <section class="container_">
-                    <a href="">
-                        <div class="course_">
-                            <img src="images/thumbnail.png" alt="course thumbnail" class="thumb_">
-                            <h6>Learn Python: The Complete Python Programming Course</h6>
-                            <p>Mahmoud Aboelsoud</p>
-                            <div class="rating_">
-                                <span><b>4.5</b></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star-half-stroke"></span>
-                                <span class="rate_">(212,883)</span>
+                <section class="container_ carousel slide" id="carouselHeader" data-ride = "carousel" data-interval = "false">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active ">
+                            <div class="cards_">
+                                <a href="" class="course-cards_">
+                                    <div class="course_">
+                                        <img src="images/thumbnail.png" alt="course thumbnail" class="thumb_">
+                                        <h6>Learn Python: The Complete Python Programming Course</h6>
+                                        <p>Mahmoud Aboelsoud</p>
+                                        <div class="rating_">
+                                            <span><b>4.5</b></span>
+                                            <span class="fa fa-star"></span>
+                                            <span class="fa fa-star"></span>
+                                            <span class="fa fa-star"></span>
+                                            <span class="fa fa-star"></span>
+                                            <span class="fa fa-star-half-stroke"></span>
+                                            <span class="rate_">(212,883)</span>
+                                        </div>
+                                        <p><b>E<span>&#8364;</span>679.99</b> <del>E<span>&#8364;</span>999.99</del></p>
+                                    </div>
+                                </a>
                             </div>
-                            <p><b>E<span>&#8364;</span>679.99</b> <del>E<span>&#8364;</span>999.99</del></p>
                         </div>
-                    </a>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </section>
             </section>  
         </section>
