fix: static course stars rate and make it dynamic

--- a/index.html
+++ b/index.html
@@ -84,16 +84,11 @@
                                         <img src="images/thumbnail.png" alt="course thumbnail" class="thumb_">
                                         <h6>Learn Python: The Complete Python Programming Course</h6>
                                         <p>Mahmoud Aboelsoud</p>
-                                        <div class="rating_">
-                                            <span><b>4.5</b></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star-half-stroke"></span>
-                                            <span class="rate_">(212,883)</span>
+                                        <span class="rate-num"><b>4.5</b></span>
+                                        <div class="stars-outer">
+                                            <div class="stars-inner"></div>
                                         </div>
-                                        <p><b>E<span>&#8364;</span>679.99</b> <del>E<span>&#8364;</span>999.99</del></p>
+                                        <div><b>E<span>&#8364;</span>679.99</b> <del>E<span>&#8364;</span>999.99</del></div>
                                     </div>
                                 </a>
                             </div>
